# proposed_traits

./: CLAUDE.md  Cargo.toml  proposal.md
crypto_traits/: Cargo.toml
crypto_traits/src/: lib.rs
messaging_traits/: Cargo.toml
messaging_traits/src/: lib.rs
peripheral_traits/: Cargo.toml
peripheral_traits/src/: i2c_target.rs  lib.rs
proposed-traits/: Cargo.toml
proposed-traits/examples/: enum_digestengine_example.rs  otp_aspeed.rs  spdm_hash_negotiation.rs  spi_nor_adapter.rs
proposed-traits/src/: lib.rs
