[package]
name = "crypto_traits"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = "0.6"
zeroize = "1.6"
# Optional reference implementations - using compatible versions
sha2 = { version = "0.10.6", optional = true }
p256 = { version = "0.13.2", optional = true }
ecdsa = { version = "0.16.9", optional = true }
elliptic-curve = { version = "0.13.8", optional = true }
signature = { version = "2.1.0", optional = true }
rand = { version = "0.8.5", optional = true }

[features]
default = []
reference-impls = ["sha2", "p256", "ecdsa", "elliptic-curve", "signature", "rand"]