[package]
name = "proposed-traits"
version = "0.1.0"
edition = "2021"

[dependencies]
# Compatibility layer - re-export all traits from separate crates
peripheral_traits = { path = "../peripheral_traits" }
crypto_traits = { path = "../crypto_traits" }
messaging_traits = { path = "../messaging_traits" }

[[example]]
name = "otp_aspeed"
path = "examples/otp_aspeed.rs"

[[example]]
name = "spdm_hash_negotiation"
path = "examples/spdm_hash_negotiation.rs"

[[example]]
name = "software_digest_impl"
path = "examples/software_digest_impl.rs"

[[example]]
name = "software_digest_complete"
path = "examples/software_digest_complete.rs"

[[example]]
name = "software_ecdsa_impl"
path = "examples/software_ecdsa_impl.rs"

[[example]]
name = "spi_nor_adapter"
path = "examples/spi_nor_adapter.rs"
